Refactor back-end a little bit